Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

XXth October 2008 - FreeRapid Downloader 0.62 released
  Added : plugins - support for megarotic.com and sexuploader.com [FS#24 - requested by Anonymous, implemented by Lukiz]   
  Added : new keystroke for Resume action - SPACE key     
  Added : Sort by name function - available from Downloads menu - ctrl+S [requested by ATom]
  Added : link to the Flash video on the web from Help menu
  Added : option to remove files after completition (NEVER, IMMEDIATELY, AT STARTUP)
  Added : option to minimize to tray on close
  Added : option to disable using default connection (warning: only connections from proxy list will be used)
#  Added : czech translation
  Changed : average speed and duration time attributes on completed file are stored [requested by Chris]
  Changed : small redesign Apperance panel in User Preferences dialog
  Changed : improved pre-allocation files (less file fragmentation)
  Changed : minor changes in RapidShare, FileFactory plugins
  Fixed : removed czech labels from open proxy file dialog 

20th September 2008 - FreeRapid Downloader 0.61 released - bug fix release + 1 great option ;-)
  Fixed : updated a few labels  
  Fixed : clipboard monitoring doesn't work properly on Windows [thanks to ATom!]
  Fixed : last selected dir not saved when files were started as paused [thanks to Savannah&Lukiz!]
  Added : added option to pre-allocate file to prevent file fragmentation (Options->Preferences->Misc->Advanced)
  Changed : a change of Look&Feel does not require restart to apply new settings, but application restart is recommended  
  Changed : minor changes in megaupload, rapidshare and uploaded.to plugins
  Changed : updated readme.txt
  Changed : upgraded Substance L&F library to version 0.5 final

