@@ -263,7 +263,7 @@ labelClipboardMonitoring.toolTipText=Clipboard Monitoring
 #color renderer
 tableColorNone=(none)
 
-mainTableColumns=Name|Progress|Completition|Est. time|Size|Speed|Average Speed|Service|Connection
+mainTableColumns=Name|Progress|Completion|Est. time|Size|Speed|Average Speed|Service|Connection
 estimating=Estimating...
 
 #Stavy
